Remove unused codes